--- a/style.css
+++ b/style.css
@@ -21,3 +21,14 @@ body {
     box-shadow: 0 15px 25px rgba(0, 0, 0, 6);
     border-radius: 10px;
 }
+
+.login-box h2 {
+    margin: 0 0 30px;
+    padding: 0;
+    color: #fff;
+    text-align: center;
+}
+
+.login-box .user-box {
+    position: relative;
+}
