--- a/style.css
+++ b/style.css
@@ -32,3 +32,15 @@ body {
 .login-box .user-box {
     position: relative;
 }
+
+.login-box .user-box input {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #fff ;
+    outline: none;
+    background: transparent;
+}
