--- a/style.css
+++ b/style.css
@@ -44,3 +44,14 @@ body {
     outline: none;
     background: transparent;
 }
+
+.login-box .user-box label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10 px 0;
+    font-size: 16px;
+    color: #fff;
+    pointer-events: none;
+    transition: .5s;
+}
