--- a/style.css
+++ b/style.css
@@ -55,3 +55,11 @@ body {
     pointer-events: none;
     transition: .5s;
 }
+
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+    top: -20px;
+    left: 0;
+    color: #ff0043;
+    font-size: 12px;
+}
