--- a/style.css
+++ b/style.css
@@ -63,3 +63,11 @@ body {
     color: #ff0043;
     font-size: 12px;
 }
+
+.login-box form a {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    color: #ff0043;
+    font-size: 16px;
+}
