--- a/style.css
+++ b/style.css
@@ -91,3 +91,11 @@ body {
     position: absolute;
     display: block;
 }
+.login-box a span {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #ff0043);
+    animation: btn-anim1 1s linear infinite;
+}
